--- a/index.html
+++ b/index.html
@@ -1,260 +1,310 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🚬 Vape 9000 🛸</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #111;
-            color: #fff;
-            overflow-x: hidden;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>🚬 Vape 9000 🛸</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #111;
+      color: #fff;
+      overflow-x: hidden;
+    }
 
-        .welcome-screen {
-            text-align: center;
-            padding: 50px;
-            background: linear-gradient(to right, #8e2de2, #4a00e0);
-            font-size: 2em;
-            color: #fff;
-            animation: glow 1.5s ease-in-out infinite alternate;
-        }
+    .screen {
+      display: none;
+      padding: 20px;
+    }
 
-        @keyframes glow {
-            0% { text-shadow: 0 0 10px #fff, 0 0 20px #ff00ff, 0 0 30px #ff00ff; }
-            100% { text-shadow: 0 0 20px #fff, 0 0 30px #ff00ff, 0 0 40px #ff00ff; }
-        }
+    .active {
+      display: block;
+    }
 
-        .filters {
-            position: sticky;
-            top: 0;
-            background: #1e1e1e;
-            padding: 10px;
-            display: flex;
-            justify-content: space-around;
-            border-bottom: 1px solid #333;
-        }
+    .welcome-screen {
+      text-align: center;
+      padding: 30px 20px;
+      background: linear-gradient(to right, #8e2de2, #4a00e0);
+      font-size: 1.8em;
+      color: #fff;
+      animation: glow 1.5s ease-in-out infinite alternate;
+    }
 
-        .filters select {
-            background: #333;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            margin: 5px;
-            border-radius: 5px;
-        }
+    @keyframes glow {
+      0% { text-shadow: 0 0 10px #fff, 0 0 20px #ff00ff; }
+      100% { text-shadow: 0 0 20px #fff, 0 0 30px #ff00ff; }
+    }
 
-        .product-list {
-            padding: 20px;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 20px;
-        }
+    .filters {
+      position: sticky;
+      top: 0;
+      background: #1e1e1e;
+      padding: 10px;
+      display: flex;
+      justify-content: space-around;
+      border-bottom: 1px solid #333;
+      z-index: 999;
+    }
 
-        .product-card {
-            background: #222;
-            border-radius: 8px;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
+    .filters select {
+      background: #333;
+      color: white;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 5px;
+    }
 
-        .product-card:hover {
-            transform: scale(1.05);
-        }
+    .product-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
 
-        .product-card img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
+    .product-card {
+      background: #222;
+      border-radius: 8px;
+      padding: 15px;
+      text-align: center;
+    }
 
-        .product-card h3 {
-            color: #ff00ff;
-            font-size: 1.2em;
-            margin: 10px 0;
-        }
+    .product-card img {
+      width: 100%;
+      border-radius: 5px;
+    }
 
-        .product-card p {
-            color: #ddd;
-            margin: 10px 0;
-        }
+    .product-card h3 {
+      color: #ff00ff;
+      font-size: 1.1em;
+    }
 
-        .product-card button {
-            background: #ff00ff;
-            color: #fff;
-            border: none;
-            padding: 10px;
-            width: 100%;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+    .product-card p {
+      margin: 6px 0;
+    }
 
-        .product-card button:hover {
-            background: #d400d4;
-        }
+    .product-card button,
+    .bottom-button,
+    .cart-button {
+      background: #ff00ff;
+      color: #fff;
+      border: none;
+      padding: 10px;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 8px;
+      width: 100%;
+    }
 
-        .cart {
-            background: #333;
-            padding: 15px;
-            text-align: center;
-        }
+    .product-card button:hover,
+    .bottom-button:hover,
+    .cart-button:hover {
+      background: #d400d4;
+    }
 
-        .cart h2 {
-            color: #fff;
-            margin-bottom: 15px;
-        }
+    .bottom-button {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      font-size: 1em;
+    }
 
-        .cart-items {
-            margin-bottom: 15px;
-        }
+    .cart-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 10px 0;
+    }
 
-        .cart-items p {
-            color: #fff;
-            margin: 5px 0;
-        }
+    .cart-controls button {
+      margin: 0 5px;
+    }
 
-        .cart-button {
-            background: #ff00ff;
-            color: #fff;
-            padding: 10px;
-            width: 100%;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+    .cart-summary {
+      margin-top: 20px;
+      font-size: 1.2em;
+    }
 
-        .cart-button:hover {
-            background: #d400d4;
-        }
-    </style>
+    .finish-buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
 
-    <!-- Welcome Screen -->
+  <!-- Screen 1: Выбор -->
+  <div class="screen active" id="screen-choose">
     <div class="welcome-screen">
-        🚬 Vape 9000 🛸 <br>
-        Step into the future of flavor.
+      🚬 Vape 9000 🛸 <br> Добро пожаловать в мир вкуса
     </div>
 
-    <!-- Filters Section (Sticky Header) -->
     <div class="filters">
-        <select id="nicotine">
-            <option value="all">Nicotine Strength</option>
-            <option value="2">2%</option>
-            <option value="5">5%</option>
-            <option value="6">6%</option>
-        </select>
-        <select id="puffs">
-            <option value="all">Puff Amount</option>
-            <option value="10000">Up to 10k</option>
-            <option value="20000">10k-20k</option>
-            <option value="30000">20k-30k</option>
-            <option value="40000">40k+</option>
-        </select>
-        <select id="price">
-            <option value="all">Price Range</option>
-            <option value="10">€10-€20</option>
-            <option value="20">€20-€30</option>
-            <option value="30">€30+</option>
-        </select>
+      <select id="nicotine">
+        <option value="all">Крепость</option>
+        <option value="2">2%</option>
+        <option value="5">5%</option>
+        <option value="6">6%</option>
+      </select>
+      <select id="puffs">
+        <option value="all">Затяжки</option>
+        <option value="10000">До 10k</option>
+        <option value="20000">10k-20k</option>
+        <option value="30000">20k-30k</option>
+        <option value="40000">40k+</option>
+      </select>
+      <select id="price">
+        <option value="all">Цена</option>
+        <option value="10">€10-€20</option>
+        <option value="20">€20-€30</option>
+        <option value="30">€30+</option>
+      </select>
     </div>
 
-    <!-- Product List -->
-    <div class="product-list" id="product-list">
-        <!-- Products will be displayed here dynamically -->
+    <div class="product-list" id="product-list"></div>
+
+    <button class="bottom-button" onclick="goToCart()">Корзина и оформление</button>
+  </div>
+
+  <!-- Screen 2: Корзина -->
+  <div class="screen" id="screen-cart">
+    <h2>🛒 Корзина</h2>
+    <div id="cart-items"></div>
+    <div class="cart-summary">Сумма: €<span id="cart-total">0</span></div>
+    <div class="finish-buttons">
+      <button onclick="goToChoose()">← Назад</button>
+      <button onclick="goToFinish()">Продолжить →</button>
     </div>
+  </div>
 
-    <!-- Cart Section -->
-    <div class="cart" id="cart">
-        <h2>Your Cart</h2>
-        <div class="cart-items" id="cart-items"></div>
-        <button class="cart-button" onclick="sendToCart()">Send to Stas</button>
+  <!-- Screen 3: Завершение -->
+  <div class="screen" id="screen-finish">
+    <h2>Завершение</h2>
+    <div class="finish-buttons">
+      <button onclick="sendToStas()">📤 Отправить Стасу</button>
+      <button onclick="goToCart()">← Назад</button>
+      <button onclick="goToChannel()">📣 Перейти в канал</button>
     </div>
+  </div>
 
-    <script>
-        const products = [
-            { name: 'TORNADO 9k', nicotine: 5, puffs: 9000, price: 20, image: 'https://example.com/vape1.png' },
-            { name: 'TORNADO 15k', nicotine: 2, puffs: 15000, price: 20, image: 'https://example.com/vape2.png' },
-            { name: 'VOZOL Gear 10k', nicotine: 5, puffs: 10000, price: 25, image: 'https://example.com/vape3.png' },
-            { name: 'MEDIAMAX 40k', nicotine: 2, puffs: 40000, price: 30, image: 'https://example.com/vape4.png' }
-        ];
+  <script>
+    const products = [
+      { name: 'TORNADO 9k', nicotine: 5, puffs: 9000, price: 20, image: 'https://example.com/vape1.png' },
+      { name: 'TORNADO 15k', nicotine: 2, puffs: 15000, price: 20, image: 'https://example.com/vape2.png' },
+      { name: 'VOZOL Gear 10k', nicotine: 5, puffs: 10000, price: 25, image: 'https://example.com/vape3.png' },
+      { name: 'MEDIAMAX 40k', nicotine: 2, puffs: 40000, price: 30, image: 'https://example.com/vape4.png' }
+    ];
 
-        let cart = [];
+    let cart = [];
 
-        // Display products based on filters
-        function filterProducts() {
-            const nicotine = document.getElementById('nicotine').value;
-            const puffs = document.getElementById('puffs').value;
-            const price = document.getElementById('price').value;
+    function displayProducts(filtered) {
+      const list = document.getElementById('product-list');
+      list.innerHTML = '';
+      filtered.forEach(p => {
+        list.innerHTML += `
+          <div class="product-card">
+            <img src="${p.image}" alt="${p.name}">
+            <h3>${p.name}</h3>
+            <p>Крепость: ${p.nicotine}%</p>
+            <p>Затяжек: ${p.puffs}</p>
+            <p>Цена: €${p.price}</p>
+            <button onclick="addToCart('${p.name}', ${p.price})">Добавить</button>
+          </div>
+        `;
+      });
+    }
 
-            const filteredProducts = products.filter(product => {
-                return (
-                    (nicotine === 'all' || product.nicotine == nicotine) &&
-                    (puffs === 'all' || product.puffs >= puffs) &&
-                    (price === 'all' || product.price <= price)
-                );
-            });
+    function filterProducts() {
+      const nic = document.getElementById('nicotine').value;
+      const puf = document.getElementById('puffs').value;
+      const pri = document.getElementById('price').value;
 
-            displayProducts(filteredProducts);
-        }
+      const filtered = products.filter(p => {
+        return (nic === 'all' || p.nicotine == nic) &&
+               (puf === 'all' || p.puffs >= puf) &&
+               (pri === 'all' || p.price <= pri);
+      });
 
-        // Display products in the list
-        function displayProducts(products) {
-            const productList = document.getElementById('product-list');
-            productList.innerHTML = '';
+      displayProducts(filtered);
+    }
 
-            products.forEach(product => {
-                const productCard = `
-                    <div class="product-card">
-                        <img src="${product.image}" alt="${product.name}">
-                        <h3>${product.name}</h3>
-                        <p>Nicotine: ${product.nicotine}%</p>
-                        <p>Puffs: ${product.puffs}</p>
-                        <p>Price: €${product.price}</p>
-                        <button onclick="addToCart('${product.name}', ${product.price})">Add to Cart</button>
-                    </div>
-                `;
-                productList.innerHTML += productCard;
-            });
-        }
+    function addToCart(name, price) {
+      const item = cart.find(i => i.name === name);
+      if (item) {
+        item.qty += 1;
+      } else {
+        cart.push({ name, price, qty: 1 });
+      }
+      updateCart();
+    }
 
-        // Add product to cart
-        function addToCart(name, price) {
-            cart.push({ name, price });
-            updateCart();
-        }
+    function updateCart() {
+      const container = document.getElementById('cart-items');
+      container.innerHTML = '';
+      let total = 0;
 
-        // Update cart display
-        function updateCart() {
-            const cartItems = document.getElementById('cart-items');
-            cartItems.innerHTML = '';
+      cart.forEach((item, i) => {
+        total += item.price * item.qty;
+        container.innerHTML += `
+          <div class="cart-item">
+            <span>${item.name} (€${item.price})</span>
+            <div class="cart-controls">
+              <button onclick="changeQty(${i}, -1)">-</button>
+              ${item.qty}
+              <button onclick="changeQty(${i}, 1)">+</button>
+            </div>
+          </div>
+        `;
+      });
 
-            cart.forEach(item => {
-                cartItems.innerHTML += `<p>${item.name} - €${item.price}</p>`;
-            });
-        }
+      document.getElementById('cart-total').innerText = total;
+    }
 
-        // Send cart to Stas (this will just log the cart for now)
-        function sendToCart() {
-            alert('Your cart has been sent to Stas!');
-            console.log(cart);
-            cart = [];
-            updateCart();
-        }
+    function changeQty(index, delta) {
+      cart[index].qty += delta;
+      if (cart[index].qty <= 0) cart.splice(index, 1);
+      updateCart();
+    }
 
-        // Initial load of products
-        filterProducts();
+    function showScreen(id) {
+      document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
+    }
 
-        // Add event listeners to filter dropdowns
-        document.getElementById('nicotine').addEventListener('change', filterProducts);
-        document.getElementById('puffs').addEventListener('change', filterProducts);
-        document.getElementById('price').addEventListener('change', filterProducts);
-    </script>
+    function goToCart() {
+      updateCart();
+      showScreen('screen-cart');
+    }
+
+    function goToChoose() {
+      showScreen('screen-choose');
+    }
+
+    function goToFinish() {
+      showScreen('screen-finish');
+    }
+
+    function sendToStas() {
+      alert("🛒 Заказ отправлен Стасу!");
+      console.log("Отправка:", cart);
+      cart = [];
+      updateCart();
+      goToChoose();
+    }
+
+    function goToChannel() {
+      window.open("https://t.me/yourchannel", "_blank");
+    }
+
+    // Init
+    filterProducts();
+    document.getElementById('nicotine').addEventListener('change', filterProducts);
+    document.getElementById('puffs').addEventListener('change', filterProducts);
+    document.getElementById('price').addEventListener('change', filterProducts);
+  </script>
 </body>
 </html>
